LPS-119353 Fix visibility of topic selector when the topic name is too long

--- a/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
@@ -275,6 +275,10 @@
 			font-size: 1.15rem;
 		}
 
+		.questions-breadcrumb-item {
+			max-width: 14rem;
+		}
+
 		.questions-breadcrumb-unstyled {
 			padding: 0 0.3rem;
 		}
